--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //calendar
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+    //cardView
+    implementation"androidx.cardview:cardview:1.0.0"
+
+
     //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
