--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     }
     buildFeatures { //viewbinding
         viewBinding = true
-        dataBinding = true
+        dataBinding  true
     }
 }
 
