--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -19,7 +20,15 @@ android {
     }
 
     buildTypes {
+        debug{
+            buildConfigField "String", "BASE_URL", '"https://open.neis.go.kr/"'
+            buildConfigField "String", "KEY", '"bde3d1d967c544409a90eab8b28d4aec"'
+        }
         release {
+            buildConfigField "String", "KEY", '"bde3d1d967c544409a90eab8b28d4aec"'
+            buildConfigField "String", "BASE_URL", '"https://open.neis.go.kr/"'
+
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -56,7 +65,6 @@ dependencies {
     //cardView
     implementation"androidx.cardview:cardview:1.0.0"
 
-
     //recyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
@@ -67,8 +75,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //okHttp
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    //koin
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+
 
 
 
